# Festival

./: PRIVACY.txt  README.txt  advanced_deadlock.cpp  advanced_deadlock.h  advisors.h  biconnect.cpp  biconnect.h  board.h  corral.h  corral_deadlock.cpp  deadlock.h  deadlock_cache.cpp  deadlock_cache.h  deadlock_utils.cpp  deadlock_utils.h  debug.cpp  debug.h  diags.cpp  diags.h  distance.cpp  distance.h  dragonfly.cpp  dragonfly_queue.h  envelope.h  girl.cpp  graph.cpp  graph.h  greedy.cpp  heuristics.h  holes.cpp  hungarian.h  imagine.h  interseting.h  io.cpp  io.h  k_dist_deadlock.cpp  lurd.cpp  match_distance.cpp  max_dist.cpp  max_dist.h  (+24 more)
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  advisors.cpp  bfs.cpp  bfs.h  board.cpp  corral.cpp  corral_deadlock.h  cycle_deadlock.cpp  cycle_deadlock.h  deadlock.cpp  dragonfly.h  dragonfly_queue.cpp  engine.cpp  engine.h  envelope.cpp  fixed_boxes.cpp  fixed_boxes.h  girl.h  global.cpp  global.h  greedy.h  helper.cpp  helper.h  heuristics.cpp  hf_search.cpp  hf_search.h  holes.h  hotspot.cpp  hotspot.h  hungarian.cpp  imagine.cpp  io.cpp  k_dist_deadlock.h  match_distance.h  mini_search.cpp  mini_search.h  moves.h  mpdb2.h  naive.cpp  naive.h  (+25 more)
app/src/main/java/nl/joriswit/festival/: Board.kt  BoardComposable.kt  FestivalComponentActivity.kt  FestivalProcessOutputParser.kt  FestivalUiState.kt  FestivalViewModel.kt
app/src/main/java/nl/joriswit/festival/ui/theme/: Color.kt  Theme.kt
app/src/main/play/listings/en-US/: full-description.txt  short-description.txt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  donottranslate-keys.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
